reduce max spawns, disable Lycanthropy

--- a/mods/petz/petz/petz.conf
+++ b/mods/petz/petz/petz.conf
@@ -31,7 +31,7 @@ rob_mobs = false
 ## The interval is avg spawn attempt interval for every player
 spawn_interval = 30
 ## Max number of mobs in the active block range
-max_mobs = 60
+max_mobs = 30
 ## Chance to spawn a mob if there are no other objects in area
 # the value should be 0 - 1
 spawn_chance = 0.3
@@ -92,7 +92,7 @@ bee_outing_ratio = 20
 #max_behives_in_area = 3
 
 #Lycanthropy stuff
-lycanthropy = true
+lycanthropy = false
 lycanthropy_infection_chance_by_wolf = 200
 lycanthropy_infection_chance_by_werewolf = 10
 
