restrict number of tamed petz
set 15 tamed petz as the maximum to prevent the server from being overrun with chickens

--- a/mods/petz/petz/petz.conf
+++ b/mods/petz/petz/petz.conf
@@ -53,6 +53,10 @@ growth_time = 1200
 ##Bloody Mode
 blood = false
 
+##Population Control
+#To no limit put: -1
+max_tamed_by_owner = 15
+
 ##Mount
 pointable_driver = true
 gallop_time= 20
