updated dependencies for hunger_ng
hopefully this will add some consistency to satiation

--- a/mods/hunger_ng/mod.conf
+++ b/mods/hunger_ng/mod.conf
@@ -1,6 +1,6 @@
 name = hunger_ng
 
 depends = default, farming
-optional_depends = hudbars, flowers, mobs_animal, bushes, ferns, moretrees
+optional_depends = hudbars, flowers, mobs_animal, bushes, ferns, moretrees, ethereal, mobs, mobs_redo
 
 description = The mods adds a hunger bar at the position of the breath bar and hides the bar if the breath bar becomes visible so the most important bar is shown without cluttering the UI too much. See <https://4w.gitlab.io/hunger_ng> for full documentation.
