petz patching in butterfly
minor changes to spawn locations and visual size

--- a/mods/petz/petz/petz.conf
+++ b/mods/petz/petz/petz.conf
@@ -1,6 +1,6 @@
 ##Change here the Petz Mod preferences
 
-petz_list = kitty,puppy,ducky,lamb,lion,calf,panda,grizzly,pony,parrot,chicken,piggy,wolf,elephant,elephant_female,pigeon,moth,camel,clownfish,bat,silkworm,chimp,hamster,dolphin,tropicalfish,beaver,turtle,frog,toucan,bee,queen_bee,mr_pumpkin,foxy,penguin,polar_bear,santa_killer,werewolf,tarantula
+petz_list = kitty,puppy,ducky,lamb,lion,calf,panda,grizzly,pony,parrot,chicken,piggy,wolf,elephant,elephant_female,pigeon,moth,camel,clownfish,bat,silkworm,chimp,hamster,dolphin,tropicalfish,beaver,turtle,frog,toucan,bee,queen_bee,mr_pumpkin,foxy,penguin,polar_bear,santa_killer,werewolf,tarantula,butterfly
 
 disable_monsters = false
 
@@ -403,3 +403,9 @@ tarantula_follow = farming:string
 tarantula_spawn_chance = 1.0
 tarantula_spawn_nodes = default:dirt_with_rainforest_litter,aotearoa:dirt_with_dry_litter,aotearoa:dirt_with_dark_litter,aotearoa:dirt_with_beech_litter,aotearoa:dirt_with_moss,ethereal:jungle_dirt,ethereal:crystal_dirt,aotearoa:forest_peat
 tarantula_spawn_biome = default
+
+##Butterfly Specific
+butterfly_follow = default:torch
+butterfly_spawn_chance = 1.0
+butterfly_spawn_nodes = default:dirt_with_coniferous_litter,default:dirt_with_grass,default:dirt_with_rainforest_litter,ethereal:grove_dirt,ethereal:prairie_dirt,aotearoa:dirt_with_beech_litter,aotearoa:dirt_with_dark_litter,aotearoa:dirt_with_moss
+butterfly_spawn_biome = default
