--- a/mods/petz/petz/petz.conf
+++ b/mods/petz/petz/petz.conf
@@ -1,11 +1,11 @@
 ##Change here the Petz Mod preferences
 
-petz_list = kitty,puppy,ducky,lamb,lion,calf,panda,grizzly,pony,parrot,chicken,piggy,wolf,elephant,elephant_female,pigeon,moth,camel,clownfish,bat,silkworm,chimp,hamster,dolphin,tropicalfish,beaver,turtle,frog,toucan,bee,queen_bee,mr_pumpkin,foxy,penguin,polar_bear,santa_killer,werewolf,tarantula
+petz_list = kitty,puppy,ducky,lamb,lion,calf,panda,grizzly,pony,parrot,chicken,piggy,wolf,elephant,elephant_female,pigeon,moth,camel,clownfish,bat,silkworm,chimp,hamster,dolphin,tropicalfish,beaver,turtle,frog,toucan,bee,queen_bee,mr_pumpkin,foxy,penguin,polar_bear,santa_killer,werewolf,tarantula,butterfly,rat
 
 disable_monsters = false
 
 ##Type of model [mesh -or- cubic]
-type_model = mesh
+type_model = cubic
 
 ##Tamagochi Mode  (Take care of your pet: fed it...)
 tamagochi_mode = true
@@ -29,12 +29,12 @@ rob_mobs = false
 
 ##Spawn Engine
 ## The interval is avg spawn attempt interval for every player
-spawn_interval = 30
+spawn_interval = 120
 ## Max number of mobs in the active block range
-max_mobs = 30
+max_mobs = 15
 ## Chance to spawn a mob if there are no other objects in area
 # the value should be 0 - 1
-spawn_chance = 0.3
+spawn_chance = 0.1
 #do not spawn in protected
 no_spawn_in_protected = false
 
@@ -51,7 +51,7 @@ pregnancy_time = 300
 growth_time = 1200
 
 ##Bloody Mode
-blood = false
+blood = true
 
 ##Population Control
 #To no limit put: -1
@@ -69,13 +69,13 @@ poop_decay = 1200
 
 ##Lay Eggs
 #Default = 90000
-lay_egg_chance = 90000
+lay_egg_chance = 900000
 
 ##Misc Random Sound for Petz
 #Default = 50
 misc_sound_chance = 50
 #max hear distance
-max_hear_distance = 8
+max_hear_distance = 3
 
 #Fly check time
 fly_check_time = 3
@@ -156,12 +156,14 @@ kitty_follow = petz:raw_chicken
 kitty_spawn_chance = 0.6
 kitty_spawn_nodes = default:dirt_with_grass,ethereal:prairie_dirt,ethereal:crystal_dirt,aotearoa:dirt_with_moss
 kitty_spawn_biome = default
+kitty_preys = petz:rat
 
 ##Puppy Specific
 puppy_follow = petz:bone
 puppy_spawn_chance = 0.6
 puppy_spawn_nodes = default:dirt_with_grass,aotearoa:dirt_with_beech_litter,ethereal:prairie_dirt,ethereal:grove_dirt
 puppy_spawn_biome = default
+puppy_preys = petz:rat
 
 ##Ducky Specific
 ducky_follow = farming:seed_wheat
@@ -192,14 +194,14 @@ lamb_colorized = true
 lion_follow = group:food_meat_raw
 lion_spawn_chance = 1.0
 lion_spawn_nodes = default:dirt_with_dry_grass,default:dry_dirt,default:dry_dirt_with_dry_grass,aotearoa:volcanic_sand,ethereal:dry_dirt
-lion_preys = petz:lamb,petz:calf,petz:pony,petz:piggy,petz:camel
+lion_preys = petz:lamb,petz:calf,petz:pony,petz:piggy,petz:camel,petz:chicken,petz:hamster
 lion_spawn_biome = default
 
 ##Wolf Specific
 wolf_follow = group:food_meat_raw
 wolf_spawn_chance = 1.0
 wolf_spawn_nodes = default:dirt_with_coniferous_litter,default:dirt_with_grass,aotearoa:dirt_with_dry_litter,aotearoa:restiad_peat,aotearoa:dirt_with_beech_litter,aotearoa:dirt_with_dark_litter,aotearoa:dirt_with_moss,ethereal:prairie_dirt,ethereal:fiery_dirt,ethereal:grove_dirt
-wolf_preys = petz:lamb,petz:piggy
+wolf_preys = petz:lamb,petz:piggy,petz:ducky,petz:chicken,petz:hamster
 wolf_spawn_biome = default
 wolf_spawn_herd = 4
 wolf_breed = default:blueberries
@@ -233,7 +235,7 @@ frog_spawn_biome = default
 ##Grizzly Specific
 grizzly_follow = default:blueberries
 grizzly_spawn_nodes = default:dirt_with_coniferous_litter,aotearoa:dirt_with_dry_litter,aotearoa:dirt_with_dark_litter,aotearoa:dirt_with_beech_litter,aotearoa:dirt_with_moss
-grizzly_preys = petz:lamb
+grizzly_preys = petz:lamb,petz:ducky,petz:chicken,petz:hamster
 grizzly_spawn_chance = 1.0
 grizzly_spawn_biome = default
 
@@ -256,7 +258,7 @@ chicken_follow = farming:seed_wheat
 chicken_spawn_chance = 0.6
 chicken_spawn_nodes = default:dirt_with_grass,ethereal:grove_dirt,ethereal:crystal_dirt
 chicken_spawn_biome = default
-chicken_predators = petz:foxy
+chicken_predators = petz:foxy,petz:wolf
 
 #Piggy Specific
 piggy_follow = farming:wheat
@@ -409,3 +411,10 @@ butterfly_follow = default:torch
 butterfly_spawn_chance = 1.0
 butterfly_spawn_nodes = default:dirt_with_coniferous_litter,default:dirt_with_grass,default:dirt_with_rainforest_litter,ethereal:grove_dirt,ethereal:prairie_dirt,aotearoa:dirt_with_beech_litter,aotearoa:dirt_with_dark_litter,aotearoa:dirt_with_moss
 butterfly_spawn_biome = default
+
+##Rat Specific
+rat_follow = farming:wheat
+rat_spawn_chance = 1.0
+rat_spawn_nodes = default:dirt_with_coniferous_litter,default:dirt_with_grass,default:dirt_with_rainforest_litter,default:dirt_with_dry_grass,default:dry_dirt,default:dry_dirt_with_dry_grass
+rat_predators = petz:kitty
+rat_spawn_biome = default
