--- a/mods/petz/petz/petz.conf
+++ b/mods/petz/petz/petz.conf
@@ -5,7 +5,14 @@ petz_list = kitty,puppy,ducky,lamb,lion,calf,panda,grizzly,pony,parrot,chicken,p
 disable_monsters = false
 
 ##Type of model [mesh -or- cubic]
-type_model = cubic
+type_model = mesh
+
+
+##Server Cron Tasks
+##Clear non-tamed Mobs in the server from time to time
+##Put '0' for disabled it.
+clear_mobs_time = 120
+
 
 ##Tamagochi Mode  (Take care of your pet: fed it...)
 tamagochi_mode = true
