--- a/mods/petz/petz/petz.conf
+++ b/mods/petz/petz/petz.conf
@@ -170,7 +170,7 @@ puppy_follow = petz:bone
 puppy_spawn_chance = 0.6
 puppy_spawn_nodes = default:dirt_with_grass,aotearoa:dirt_with_beech_litter,ethereal:prairie_dirt,ethereal:grove_dirt
 puppy_spawn_biome = default
-puppy_preys = petz:rat
+puppy_preys = petz:rat,petz:kitty
 
 ##Ducky Specific
 ducky_follow = farming:seed_wheat
