--- a/mods/petz/petz/petz.conf
+++ b/mods/petz/petz/petz.conf
@@ -11,7 +11,7 @@ type_model = mesh
 ##Server Cron Tasks
 ##Clear non-tamed Mobs in the server from time to time
 ##Put '0' for disabled it.
-clear_mobs_time = 0
+clear_mobs_time = 360
 
 
 ##Tamagochi Mode  (Take care of your pet: fed it...)
@@ -36,9 +36,9 @@ rob_mobs = false
 
 ##Spawn Engine
 ## The interval is avg spawn attempt interval for every player
-spawn_interval = 120
+spawn_interval = 240
 ## Max number of mobs in the active block range
-max_mobs = 15
+max_mobs = 5
 ## Chance to spawn a mob if there are no other objects in area
 # the value should be 0 - 1
 spawn_chance = 0.1
@@ -54,15 +54,15 @@ lashing_tame_count = 3
 
 ##Breed System
 pregnant_count = 5
-pregnancy_time = 300
-growth_time = 1200
+pregnancy_time = 600
+growth_time = 3600
 
 ##Bloody Mode
 blood = true
 
 ##Population Control
 #To no limit put: -1
-max_tamed_by_owner = 15
+max_tamed_by_owner = 5
 
 ##Mount
 pointable_driver = true
@@ -96,7 +96,7 @@ sleeping = true
 #Bee stuff
 initial_honey_behive = 3
 max_honey_behive = 10
-max_bees_behive = 3
+max_bees_behive = 2
 #bees_outing_rate=1 means that a bee inmediatelly go out the behive for pollen
 bee_outing_ratio = 20
 #behive_spawn_chance = 0.6
@@ -107,6 +107,7 @@ lycanthropy = false
 lycanthropy_infection_chance_by_wolf = 200
 lycanthropy_infection_chance_by_werewolf = 10
 
+##Spawn Mobs?
 ##Spawn Mobs?
 kitty_spawn = true
 puppy_spawn = true
@@ -146,6 +147,8 @@ penguin_spawn = true
 polar_bear_spawn = true
 santa_killer_spawn = true
 tarantula = true
+butterfly = true
+rat = true
 
 ##Enviromental Damage
 air_damage = 1
