--- a/mods/worldedit/modpack.conf
+++ b/mods/worldedit/modpack.conf
@@ -1,2 +1,2 @@
-name = Minetest-WorldEdit
+name = worldedit
 description = WorldEdit is an in-game world editor. Use it to repair griefing, or just create awesome buildings in seconds.
