--- a/mods/clementinetree/mod.conf
+++ b/mods/clementinetree/mod.conf
@@ -1,4 +1,4 @@
 name = clementinetree
 description = Clementine Tree for Decidious Forest
-depends = default
+depends = default,cloudlands,ethereal
 optional_depends = stairs, bonemeal
