--- a/mods/cloudlands/mod.conf
+++ b/mods/cloudlands/mod.conf
@@ -1,5 +1,5 @@
 name = cloudlands
-depends = ethereal,aotearoa
+depends = ethereal,moreplants
 optional_depends = nether, biomeinfo, schemlib, default
 description = """
 Hallelujah Mountains for Minetest
