--- a/mods/ebony/mod.conf
+++ b/mods/ebony/mod.conf
@@ -1,4 +1,4 @@
 name = ebony
 description = Ebony Tree for Rainforest Biome
-depends = default
+depends = default,ethereal,cloudlands
 optional_depends = stairs, bonemeal
