--- a/mods/jacaranda/mod.conf
+++ b/mods/jacaranda/mod.conf
@@ -1,4 +1,4 @@
 name = jacaranda
 description = Jacaranda for jungles
-depends = default
+depends = default, cloudlands
 optional_depends = stairs, bonemeal
