--- a/mods/lemontree/mod.conf
+++ b/mods/lemontree/mod.conf
@@ -1,4 +1,4 @@
 name = lemontree
 description = Lemon Tree for Decidious Forest
-depends = default
+depends = default,ethereal,cloudlands
 optional_depends = stairs, bonemeal
