--- a/mods/pomegranate/mod.conf
+++ b/mods/pomegranate/mod.conf
@@ -1,4 +1,4 @@
 name = pomegranate
 description = Pomegranate Tree for Savanha
-depends = default
+depends = default,cloudlands,ethereal
 optional_depends = stairs, bonemeal
