update fire protection
turned off when upgrading

--- a/mods/3d_armor/armor.conf
+++ b/mods/3d_armor/armor.conf
@@ -18,7 +18,7 @@ ARMOR_MATERIALS = {
 }
 
 -- Enable fire protection (defaults true if using ethereal mod)
-ARMOR_FIRE_PROTECT = false
+ARMOR_FIRE_PROTECT = true
 
 -- Fire protection nodes, (name, protection level, damage)
 ARMOR_FIRE_NODES = {
