--- a/mods/petz/petz/petz.conf
+++ b/mods/petz/petz/petz.conf
@@ -1,18 +1,9 @@
 ##Change here the Petz Mod preferences
 
-petz_list = kitty,puppy,ducky,lamb,lion,calf,panda,grizzly,pony,parrot,chicken,piggy,wolf,elephant,elephant_female,pigeon,moth,camel,clownfish,bat,silkworm,chimp,hamster,dolphin,tropicalfish,beaver,turtle,frog,toucan,bee,queen_bee,mr_pumpkin,foxy,penguin,polar_bear,santa_killer,werewolf,tarantula,butterfly,rat
-
-disable_monsters = false
+petz_list = kitty,puppy,ducky,lamb,lion,calf,panda,grizzly,pony,parrot,chicken,piggy,wolf,elephant,elephant_female,pigeon,moth,camel,clownfish,bat,silkworm,chimp,hamster,dolphin,tropicalfish,beaver,turtle,frog,toucan,bee,queen_bee,mr_pumpkin,foxy,penguin,polar_bear,santa_killer,werewolf,tarantula,butterfly,rat,goat
 
 ##Type of model [mesh -or- cubic]
 type_model = mesh
-
-
-##Server Cron Tasks
-##Clear non-tamed Mobs in the server from time to time
-##Put '0' for disabled it.
-clear_mobs_time = 360
-
 
 ##Tamagochi Mode  (Take care of your pet: fed it...)
 tamagochi_mode = true
@@ -34,14 +25,39 @@ type_api = mobkit
 ##Capture Mobs
 rob_mobs = false
 
-##Spawn Engine
-## The interval is avg spawn attempt interval for every player
-spawn_interval = 240
+##Capture Mobs
+rob_mobs = false
+
+##Selling
+selling = false
+selling_exchange_items = default:copper_lump,default:copper_ingot,default:iron_lump,default:steel_ingot,default:gold_lump,default:gold_ingot,default:diamond
+
+#Spawn Engine
+
+##Spawn Monsters?
+disable_monsters = false
+
+#ratio peaceful/monsters (0-1)
+##I.e. a ratio of 0.7 means that is more probable more peaceful mobs than monsters
+##'is_monster' is an entity definition
+##(overrided by the 'disable_monsters' setting)
+spawn_peaceful_monsters_ratio = 0.7
+
+##Disable here some mobs to not spawn
+###Add the type name of the petz plus "_disable_spawn"
+###Normal bees should not spam!!!
+bee_disable_spawn = true
+
+## The interval is avg spawn attempt interval (seconds) for every player
+spawn_interval = 30
+
 ## Max number of mobs in the active block range
 max_mobs = 5
+
 ## Chance to spawn a mob if there are no other objects in area
 # the value should be 0 - 1
-spawn_chance = 0.1
+spawn_chance = 0.2
+
 #do not spawn in protected
 no_spawn_in_protected = false
 
@@ -82,7 +98,7 @@ lay_egg_chance = 900000
 #Default = 50
 misc_sound_chance = 50
 #max hear distance
-max_hear_distance = 3
+max_hear_distance = 5
 
 #Fly check time
 fly_check_time = 3
@@ -92,6 +108,12 @@ cobweb_decay = 1200
 
 #Sleeping behaviour
 sleeping = true
+
+#Herding Behaviour
+herding = false
+herding_timing = 3
+herding_members_distance = 5
+herding_shepherd_distance = 5
 
 #Bee stuff
 initial_honey_behive = 3
@@ -107,48 +129,6 @@ lycanthropy = false
 lycanthropy_infection_chance_by_wolf = 200
 lycanthropy_infection_chance_by_werewolf = 10
 
-##Spawn Mobs?
-##Spawn Mobs?
-kitty_spawn = true
-puppy_spawn = true
-ducky_spawn = true
-beaver_spawn = true
-lamb_spawn = true
-lion_spawn = true
-calf_spawn = true
-panda_spawn = true
-frog_spawn = true
-grizzly_spawn = true
-pony_spawn = true
-parrot_spawn= true
-chicken_spawn = true
-pigeon_spawn = true
-turtle_spawn = true
-clownfish_spawn = true
-piggy_spawn = true
-tropicalfish_spawn = true
-wolf_spawn = true
-elephant_spawn = true
-elephant_female_spawn = true
-moth_spawn = true
-camel_spawn = true
-bat_spawn = true
-silkworm_spawn = true
-chimp_spawn = true
-hamster_spawn = true
-dolphin_spawn = true
-toucan_spawn = true
-queen_bee_spawn = true
-mr_pumpkin_spawn = true
-#Normal bees should not spam!!!
-bee_spawn = false
-foxy_spawn = true
-penguin_spawn = true
-polar_bear_spawn = true
-santa_killer_spawn = true
-tarantula = true
-butterfly = true
-rat = true
 
 ##Enviromental Damage
 air_damage = 1
@@ -157,6 +137,11 @@ igniter_damage = 1
 
 ##Weapons
 pumpkin_grenade_damage = 8
+
+##Server Cron Tasks
+##Clear non-tamed Mobs in the server from time to time
+##Put '0' for disabled it.
+clear_mobs_time = 360
 
 ##Specific Settings for Mobs
 #Spawn Chance should be a value form 0.0 to 1.0
@@ -172,8 +157,8 @@ kitty_preys = petz:rat
 puppy_follow = petz:bone
 puppy_spawn_chance = 0.6
 puppy_spawn_nodes = default:dirt_with_grass,aotearoa:dirt_with_beech_litter,ethereal:prairie_dirt,ethereal:grove_dirt
-puppy_spawn_biome = default
 puppy_preys = petz:rat,petz:kitty
+puppy_spawn_biome = default
 
 ##Ducky Specific
 ducky_follow = farming:seed_wheat
@@ -196,28 +181,23 @@ lamb_spawn_nodes = default:dirt_with_grass,ethereal:grove_dirt,ethereal:prairie_
 lamb_predators = petz:wolf,petz:lion,petz:grizzly
 lamb_spawn_biome = default
 lamb_spawn_herd = 3
-lamb_breed = default:blueberries
-lamb_copulation_distance = 2
 lamb_colorized = true
 
 ##Lion Specific
 lion_follow = group:food_meat_raw
 lion_spawn_chance = 1.0
 lion_spawn_nodes = default:dirt_with_dry_grass,default:dry_dirt,default:dry_dirt_with_dry_grass,aotearoa:volcanic_sand,ethereal:dry_dirt
-lion_preys = petz:lamb,petz:calf,petz:pony,petz:piggy,petz:camel,petz:chicken,petz:hamster
+lion_preys = petz:lamb,petz:calf,petz:pony,petz:piggy,petz:camel,petz:chicken,petz:goat
 lion_spawn_biome = default
 
 ##Wolf Specific
 wolf_follow = group:food_meat_raw
 wolf_spawn_chance = 1.0
 wolf_spawn_nodes = default:dirt_with_coniferous_litter,default:dirt_with_grass,aotearoa:dirt_with_dry_litter,aotearoa:restiad_peat,aotearoa:dirt_with_beech_litter,aotearoa:dirt_with_dark_litter,aotearoa:dirt_with_moss,ethereal:prairie_dirt,ethereal:fiery_dirt,ethereal:grove_dirt
-wolf_preys = petz:lamb,petz:piggy,petz:ducky,petz:chicken,petz:hamster
+wolf_preys = petz:lamb,petz:piggy,petz:ducky,petz:chicken,petz:goat
 wolf_spawn_biome = default
 wolf_spawn_herd = 4
 wolf_breed = default:blueberries
-wolf_copulation_distance = 3
-wolf_convert = petz:bone
-wolf_convert_to = petz:puppy
 wolf_convert_count = 5
 
 ##Calf Specific
@@ -245,7 +225,7 @@ frog_spawn_biome = default
 ##Grizzly Specific
 grizzly_follow = default:blueberries
 grizzly_spawn_nodes = default:dirt_with_coniferous_litter,aotearoa:dirt_with_dry_litter,aotearoa:dirt_with_dark_litter,aotearoa:dirt_with_beech_litter,aotearoa:dirt_with_moss
-grizzly_preys = petz:lamb,petz:ducky,petz:chicken,petz:hamster
+grizzly_preys = petz:lamb,petz:ducky,petz:chicken,petz:goat
 grizzly_spawn_chance = 1.0
 grizzly_spawn_biome = default
 
@@ -277,6 +257,7 @@ piggy_spawn_nodes = default:dirt_with_grass,ethereal:grove_dirt,ethereal:mushroo
 piggy_predators = petz:lion,petz:wolf
 piggy_spawn_biome = default
 piggy_spawn_herd = 3
+
 
 ##Pigeon Specific
 pigeon_follow = farming:seed_wheat
@@ -329,7 +310,6 @@ camel_spawn_nodes = default:desert_sand,default:silver_sand,ethereal:dry_dirt
 camel_predators = petz:lion
 camel_spawn_biome = default
 camel_breed = default:blueberries
-camel_copulation_distance = 3
 
 ##Clownfish Specific
 clownfish_follow = default:coral_orange
@@ -414,17 +394,23 @@ werewolf_spawn_nodes = default:dirt_with_coniferous_litter,default:dirt_with_gra
 tarantula_follow = farming:string
 tarantula_spawn_chance = 1.0
 tarantula_spawn_nodes = default:dirt_with_rainforest_litter,aotearoa:dirt_with_dry_litter,aotearoa:dirt_with_dark_litter,aotearoa:dirt_with_beech_litter,aotearoa:dirt_with_moss,ethereal:jungle_dirt,ethereal:crystal_dirt,aotearoa:forest_peat
-tarantula_spawn_biome = default
 
 ##Butterfly Specific
 butterfly_follow = default:torch
 butterfly_spawn_chance = 1.0
 butterfly_spawn_nodes = default:dirt_with_coniferous_litter,default:dirt_with_grass,default:dirt_with_rainforest_litter,ethereal:grove_dirt,ethereal:prairie_dirt,aotearoa:dirt_with_beech_litter,aotearoa:dirt_with_dark_litter,aotearoa:dirt_with_moss
-butterfly_spawn_biome = default
 
 ##Rat Specific
 rat_follow = farming:wheat
-rat_spawn_chance = 1.0
+rat_spawn_chance = 0.8
 rat_spawn_nodes = default:dirt_with_coniferous_litter,default:dirt_with_grass,default:dirt_with_rainforest_litter,default:dirt_with_dry_grass,default:dry_dirt,default:dry_dirt_with_dry_grass
 rat_predators = petz:kitty
 rat_spawn_biome = default
+
+##Goat Specific
+goat_follow = farming:wheat
+goat_spawn_chance = 0.6
+goat_spawn_nodes = default:stone,default:dirt_with_grass, default:snow, default:snowblock
+goat_predators = petz:wolf,petz:lion,petz:grizzly
+goat_spawn_biome = default
+goat_spawn_herd = 3
