--- a/mods/petz/petz/petz.conf
+++ b/mods/petz/petz/petz.conf
@@ -163,7 +163,7 @@ puppy_preys = petz:rat,petz:kitty
 ##Ducky Specific
 ducky_follow = farming:seed_wheat
 ducky_spawn_chance = 0.6
-ducky_spawn_nodes = default:dirt_with_grass,aotearoa:seashells,aotearoa:mud,ethereal:gray_dirt
+ducky_spawn_nodes = default:river_water_source, default:water_source, default:dirt_with_grass,aotearoa:seashells,aotearoa:mud,ethereal:gray_dirt
 ducky_spawn_biome = default
 ducky_predators = petz:foxy
 
