update from dev

--- a/mods/cloudlands/mod.conf
+++ b/mods/cloudlands/mod.conf
@@ -1,5 +1,5 @@
 name = cloudlands
-depends = ethereal,moreplants
+depends = etherium_stuff,moreplants
 optional_depends = nether, biomeinfo, schemlib, default
 description = """
 Hallelujah Mountains for Minetest
