--- a/mods/mobs_dwarves/mod.conf
+++ b/mods/mobs_dwarves/mod.conf
@@ -1,4 +1,4 @@
 name = mobs_dwarves
 description = Adds dwarves.
 depends = default, mobs
-optional_depends = castle_masonry, dfcaverns, real_minerals
+optional_depends = castle_masonry, dfcaverns, real_minerals, technic_worldgen, glooptest, quartz
