update mods from master
https://notabug.org/TenPlus1

farming
wine
cblocks
mobs_redo

--- a/mods/farming/farming.conf
+++ b/mods/farming/farming.conf
@@ -29,6 +29,7 @@ farming.pepper = 0.0002
 farming.pineapple = 0.0001
 farming.peas = 0.0001
 farming.beetroot = 0.0001
+farming.mint = 0.0001
 farming.grains = true -- true or false only
 
 -- default rarety of crops on map (higher number = more crops)
